# requirements

./: .gitignore  .pre-commit-config.yaml  BUGS.md  CLAUDE.md  Makefile  README.md  clean.py  justfile  mypy.ini  noxfile.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
.run/: Test Cli.run.xml
requirements/: main.py
src/: config.py  console.py  main.py  packages.py  pypi.py  sorting.py
src/requirements/: config.py  console.py  files.py  main.py  packages.py  pypi.py  sorting.py
tests/: conftest.py  test_add.py  test_cat.py  test_check_file_writable.py  test_cli.py  test_file_existence_validation.py  test_find.py  test_integration.py  test_locale_handling.py  test_preview_output.py  test_read_only_files.py  test_remove.py  test_sort.py  test_sort_command.py  test_update.py  test_utils.py
tests/fixtures/: pypi_simple_requests.html
tests/integration/: test_add.py  test_cat.py  test_color_options.py  test_config_commands.py  test_file_existence_validation.py  test_find.py  test_integration.py  test_preview_output.py  test_read_only_files.py  test_remove.py  test_update.py  test_versions.py
tests/unit/: test_check_file_writable.py  test_config.py  test_console.py  test_locale_handling.py  test_package_validation.py  test_pypi.py  test_sort.py  test_url_handling.py  test_utils.py
