[project]
name = "requirements"
version = "0.1.0"
description = "Cli tool to update requirements.txt files in a mono repo style project."
authors = [
    {name = "Jason", email = "5758786+CaptainDriftwood@users.noreply.github.com"},
]
dependencies = [
    "click>=8.1.7",
    "packaging>=21.0",
    "rich>=13.9.4",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
keywords = ["requirements", "monorepo", "dependency", "cli", "python"]

[project.urls]
Homepage = "https://github.com/CaptainDriftwood/requirements"
Repository = "https://github.com/CaptainDriftwood/requirements"
Issues = "https://github.com/CaptainDriftwood/requirements/issues"

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Software Distribution",
    "Topic :: Utilities",
    "Environment :: Console",
    "Typing :: Typed",
]

[project.scripts]
requirements = "src.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.14.0",
    "pytest-timeout>=2.3.0",
    "ruff>=0.4.0",
    "setuptools>=80.9.0",
    "wheel>=0.45.1",
    "nox>=2025.11.12",
    "nox-uv>=0.6.3",
]

# Ruff configuration
[tool.ruff]
line-length = 88
target-version = "py311"
include = ["*.py", "*.pyi", "**/pyproject.toml", "src/**/*.py", "tests/**/*.py"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "PTH", # flake8-use-pathlib
    "RUF", # ruff-specific rules
    "PL",  # pylint
    "PIE", # flake8-pie
    "T20", # flake8-print
    "RET", # flake8-return
    "RSE", # flake8-raise
    "SLF", # flake8-self
    "TRY", # tryceratops
    "FLY", # flynt
    "PERF", # perflint
    "FURB", # refurb
    "LOG", # flake8-logging
    "G",   # flake8-logging-format
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "W191",  # indentation contains tabs
    "PLR0913", # too many arguments to function call
    "PLR0912", # too many branches
    "PLR0915", # too many statements
    "PLR2004", # magic value used in comparison
    "TRY003", # avoid specifying long messages outside the exception class
    "TRY300", # consider moving this statement to an `else` block
    "PERF401", # use a list comprehension to create a transformed list
    "RUF012", # mutable class attributes should be annotated with `typing.ClassVar`
    "PLE1205", # format string contains both automatic and manual field specs
    "T201", # print found
    "G004", # logging statement uses f-string
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["ARG", "SIM", "PLR0913", "PLR0915", "PLR2004", "TRY301", "PERF401", "PLC0415", "SLF001"]

[tool.ruff.lint.isort]
# Configure import sorting
known-first-party = ["src"]
force-single-line = false
split-on-trailing-comma = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short --cov=src --cov-report=term-missing --cov-report=html"
timeout = 10  # Default timeout of 10 seconds per test

# Coverage configuration
[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "tests/*",
    "*/site-packages/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    # Patterns for __init__.py files only
    "^\\s*from\\s+.*\\s+import\\s+.*$",  # from module import something
    "^\\s*import\\s+.*$",              # import module
    "^\\s*__version__\\s*=",           # __version__ = "..."
    "^\\s*__author__\\s*=",            # __author__ = "..."
    "^\\s*__all__\\s*=",               # __all__ = [...]
]
show_missing = true
skip_covered = false
precision = 2
